--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,12 +1,10 @@
-streamlit
+Flask
+flask-cors
 tensorflow
-gdown
-p
-pillow
+torch
+torchvision
 numpy
-scikit-learn
-matplotlib
-seaborn
-pickle-mixin
+pillow
+gdown
+pickle5
 gunicorn
-flask
