--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,8 @@
-Flask==2.3.3
-flask-cors==4.0.0
-tensorflow==2.15.0
-torch==2.1.0
-torchvision==0.16.0
-numpy==1.24.4
-Pillow==9.5.0
-gdown==4.7.1
+Flask
+flask-cors
+tensorflow
+torch
+torchvision
+numpy
+Pillow
+gdown
