--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,8 +1,57 @@
-Flask
-flask-cors
-tensorflow
-torch
-torchvision
-numpy
-Pillow
-gdown
+absl-py==2.2.2
+astunparse==1.6.3
+beautifulsoup4==4.13.3
+blinker==1.9.0
+certifi==2025.1.31
+charset-normalizer==3.4.1
+click==8.1.8
+filelock==3.18.0
+Flask==3.1.0
+flask-cors==5.0.1
+flatbuffers==25.2.10
+fsspec==2025.3.2
+gast==0.6.0
+gdown==5.2.0
+google-pasta==0.2.0
+grpcio==1.71.0
+h5py==3.13.0
+idna==3.10
+importlib_metadata==8.6.1
+itsdangerous==2.2.0
+Jinja2==3.1.6
+keras==3.9.2
+libclang==18.1.1
+Markdown==3.7
+markdown-it-py==3.0.0
+MarkupSafe==3.0.2
+mdurl==0.1.2
+ml_dtypes==0.5.1
+mpmath==1.3.0
+namex==0.0.8
+networkx==3.2.1
+numpy==2.0.2
+opt_einsum==3.4.0
+optree==0.14.1
+packaging==24.2
+pillow==11.1.0
+protobuf==5.29.4
+Pygments==2.19.1
+PySocks==1.7.1
+requests==2.32.3
+rich==14.0.0
+six==1.17.0
+soupsieve==2.6
+sympy==1.13.1
+tensorboard==2.19.0
+tensorboard-data-server==0.7.2
+tensorflow==2.19.0
+tensorflow-io-gcs-filesystem==0.37.1
+termcolor==3.0.1
+torch==2.6.0
+torchvision==0.21.0
+tqdm==4.67.1
+typing_extensions==4.13.1
+urllib3==2.3.0
+Werkzeug==3.1.3
+wrapt==1.17.2
+zipp==3.21.0
